--- a/src/components/Content/Content.module.scss
+++ b/src/components/Content/Content.module.scss
@@ -327,6 +327,162 @@
       left: 13%;
       border: 1px solid #ffc423;
     }
+    .imgWar {
+      width: 440px;
+      height: 320px;
+      position: absolute;
+      top: 166%;
+      left: 37%;
+      border: 1px solid #ffc423;
+    }
+    .imgDeath {
+      width: 280px;
+      height: 180px;
+      position: absolute;
+      top: 151%;
+      right: 13%;
+      border: 1px solid #ffc423;
+    }
+    .descBottom1 {
+      width: 300px;
+      height: 110px;
+      position: absolute;
+      top: 175%;
+      left: 13%;
+      background-color: #d5b273;
+      border: 2px solid #ffc423;
+
+      .imgDescMid1 {
+        width: 90%;
+        height: 80%;
+        margin-left: 10px;
+        margin-top: 10px;
+        background: transparent;
+      }
+    }
+    .descBottom2 {
+      width: 300px;
+      height: 120px;
+      position: absolute;
+      top: 187%;
+      left: 18%;
+      background-color: #d5b273;
+      border: 2px solid #ffc423;
+
+      .imgDescMid2 {
+        width: 90%;
+        height: 80%;
+        margin-left: 10px;
+        margin-top: 10px;
+        background: transparent;
+      }
+    }
+    .descBottom4 {
+      width: 280px;
+      height: 50px;
+      position: absolute;
+      top: 201%;
+      left: 42%;
+      background-color: #d5b273;
+      border-radius: 10px;
+      border: 2px solid #ffc423;
+
+      .imgDescMid4 {
+        width: 90%;
+        height: 80%;
+        margin-left: 10px;
+        margin-top: 5px;
+        background: transparent;
+      }
+    }
+    .descBottom5 {
+      width: 170px;
+      height: 55px;
+      position: absolute;
+      top: 207%;
+      left: 34.7%;
+      background-color: #d5b273;
+      border-radius: 10px;
+      border: 2px solid #ffc423;
+
+      .imgDescMid5 {
+        width: 90%;
+        height: 80%;
+        margin-left: 10px;
+        margin-top: 5px;
+        background: transparent;
+      }
+    }
+    .descBottom6 {
+      width: 170px;
+      height: 55px;
+      position: absolute;
+      top: 207%;
+      left: 45.2%;
+      background-color: #d5b273;
+      border-radius: 10px;
+      border: 2px solid #ffc423;
+
+      .imgDescMid6 {
+        width: 90%;
+        height: 80%;
+        margin-left: 10px;
+        margin-top: 5px;
+        background: transparent;
+      }
+    }
+    .descBottom7 {
+      width: 170px;
+      height: 55px;
+      position: absolute;
+      top: 207%;
+      left: 55.7%;
+      background-color: #d5b273;
+      border-radius: 10px;
+      border: 2px solid #ffc423;
+
+      .imgDescMid7 {
+        width: 90%;
+        height: 80%;
+        margin-left: 10px;
+        margin-top: 5px;
+        background: transparent;
+      }
+    }
+    .descBottom8 {
+      width: 350px;
+      height: 120px;
+      position: absolute;
+      top: 187%;
+      left: 64.5%;
+      background-color: #d5b273;
+      border: 2px solid #ffc423;
+
+      .imgDescMid8 {
+        width: 90%;
+        height: 80%;
+        margin-left: 10px;
+        margin-top: 8px;
+        background: transparent;
+      }
+    }
+    .descBottom9 {
+      width: 350px;
+      height: 120px;
+      position: absolute;
+      top: 174%;
+      left: 66%;
+      background-color: #d5b273;
+      border: 2px solid #ffc423;
+
+      .imgDescMid9 {
+        width: 90%;
+        height: 80%;
+        margin-left: 10px;
+        margin-top: 10px;
+        background: transparent;
+      }
+    }
 
   }
 
