--- a/src/components/Content/Content.module.scss
+++ b/src/components/Content/Content.module.scss
@@ -7,7 +7,9 @@
 .body {
   height: 200vh;
   width: 100%;
-
+  background-image: url("/public/back.jpg");
+  background-repeat: repeat;
+  background-size: contain;
   .header {
     height: 150px;
     width: 100%;
